# QT-VSCode-Workshop

./: README.md
Code/: CMakeLists.txt
Code/Application/: CMakeLists.txt  main.cpp  main.qml
Code/Application/Wrapper/: wrapper.cpp  wrapper.h
Code/Backend/: CMakeLists.txt  core.cpp  core.h
Command Lines Commands/: Buil_Type.txt  Plugins-CMakeLists.txt  QTVisualStudioSetPath.txt
Settings/: c_cpp_properties.json  launch.json
